# haskell-educational-prelude

./: .ghci  LICENSE  README.md  haskell-educational-prelude.cabal  stack.yaml
src/: Prelude.hs
